cargo-features = ["profile-rustflags"]

[package]
    name = "vid-pid-rs"
    version = "0.1.0"
    edition = "2024"
    license = "MIT"
    authors = ["Shifty <contact@shifty.cloud>"]

[dependencies]
    hidapi = "2.6.3"

[profile.dev]
    overflow-checks = true
    debug = true
    strip = false
    panic = "unwind"
    codegen-units = 1024
    incremental = true
    opt-level = 0
    lto = false

[profile.release]
    overflow-checks = true
    debug = false
    strip = "symbols"
    panic = "abort"
    codegen-units = 1
    incremental = false
    opt-level = "z"
    lto = "fat"
    rustflags = ["-C", "target-cpu=x86-64", "-C", "strip=symbols"]

[profile.release.package."*"]
    overflow-checks = true
    debug = false
    codegen-units = 1
    opt-level = "z"
